@@ -14,14 +14,13 @@ contains
 
   end subroutine actual_conductivity_init
 
-  subroutine actual_conductivity(eos_state, therm_cond)
+  subroutine actual_conductivity(eos_state)
     
     use extern_probin_module, only: const_opacity
 
-    type (eos_t), intent(in) :: eos_state
-    real (kind=rt), intent(inout) :: therm_cond
+    type (eos_t), intent(inout) :: eos_state
 
-    therm_cond = (16*sigma_SB*(eos_state%T)**3)/(3*const_opacity*eos_state%rho)
+    eos_state % conductivity = (16*sigma_SB*(eos_state%T)**3)/(3*const_opacity*eos_state%rho)
     
   end subroutine actual_conductivity
 
